--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-elm": "^1.4.0"
+    "grunt-run": "^0.6.0"
   }
 }
