--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A demonstration of data paging in Elm.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --host=0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/benthepoet/elm-data-paging#readme",
   "dependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-elm-make": "^0.1.0"
+    "elm": "^0.18.0",
+    "elm-webpack-loader": "^4.5.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.1.4"
   }
 }
